# commodity-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
.streamlit/: config.toml
config/: commodities.json
dashboard/: app.py
scripts/: run_analysis.py  run_dashboard.py  run_ingestion.py  startup.py
src/: database.py  settings.py
src/analysis/: __init__.py  cross_commodity.py  snapshot.py  storage_economics.py
src/ingestion/: __init__.py  consumption.py  futures.py  ice_stocks.py  lme_stocks.py
src/processing/: __init__.py  normaliser.py  spreads.py
src/reporting/: __init__.py  charts.py  commentary.py
templates/: commentary.md.j2
tests/: conftest.py  test_ingestion.py  test_integration.py  test_normaliser.py  test_spreads.py  test_storage_economics.py
